--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -56,6 +56,10 @@
     "translation": "Before getting started:"
   },
   {
+    "id": "Buildpack:",
+    "translation": ""
+  },
+  {
     "id": "CANCELING",
     "translation": ""
   },
@@ -700,6 +704,10 @@
     "translation": "CLI plugin management:"
   },
   {
+    "id": "CPU",
+    "translation": ""
+  },
+  {
     "id": "Cloud Foundry API version {{.APIVersion}} requires CLI version {{.MinCLIVersion}}. You are currently on version {{.BinaryVersion}}. To upgrade your CLI, please visit: https://github.com/cloudfoundry/cli#downloads",
     "translation": ""
   },
@@ -741,6 +749,10 @@
   },
   {
     "id": "Deleting route {{.Route}} ...",
+    "translation": ""
+  },
+  {
+    "id": "Disk",
     "translation": ""
   },
   {
@@ -824,6 +836,10 @@
     "translation": "Incorrect usage: invalid healthcheck type"
   },
   {
+    "id": "Instances:",
+    "translation": ""
+  },
+  {
     "id": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint"
   },
@@ -840,6 +856,10 @@
     "translation": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information."
   },
   {
+    "id": "Last uploaded:",
+    "translation": ""
+  },
+  {
     "id": "List tasks of an app",
     "translation": ""
   },
@@ -852,7 +872,15 @@
     "translation": "Max wait time to establish a connection, including name resolution, in seconds"
   },
   {
+    "id": "Memory",
+    "translation": ""
+  },
+  {
     "id": "Name to give the task (generated if omitted)",
+    "translation": ""
+  },
+  {
+    "id": "Name:",
     "translation": ""
   },
   {
@@ -988,6 +1016,10 @@
     "translation": "Route and domain management:"
   },
   {
+    "id": "Routes:",
+    "translation": ""
+  },
+  {
     "id": "Run a one-off task on an app",
     "translation": ""
   },
@@ -1028,12 +1060,20 @@
     "translation": ""
   },
   {
+    "id": "Since",
+    "translation": ""
+  },
+  {
     "id": "Space '{{.Name}}' not found.",
     "translation": ""
   },
   {
     "id": "Space management:",
     "translation": "Space management:"
+  },
+  {
+    "id": "Stack:",
+    "translation": ""
   },
   {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
@@ -1513,6 +1553,10 @@
   },
   {
     "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
+    "id": "{{.MemorySize}} x {{.NumInstances}} instances",
     "translation": ""
   },
   {
