--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -88,6 +88,10 @@
     "translation": "Before getting started:"
   },
   {
+    "id": "Buildpack:",
+    "translation": ""
+  },
+  {
     "id": "CANCELING",
     "translation": ""
   },
@@ -1120,6 +1124,10 @@
     "translation": "COMMAND"
   },
   {
+    "id": "CPU",
+    "translation": ""
+  },
+  {
     "id": "Cloud Foundry API version {{.APIVersion}} requires CLI version {{.MinCLIVersion}}. You are currently on version {{.BinaryVersion}}. To upgrade your CLI, please visit: https://github.com/cloudfoundry/cli#downloads",
     "translation": ""
   },
@@ -1182,6 +1190,10 @@
   {
     "id": "Disabling ssh support for space '{{.SpaceName}}'...",
     "translation": "Disabling ssh support for space '{{.SpaceName}}'..."
+  },
+  {
+    "id": "Disk",
+    "translation": ""
   },
   {
     "id": "ENVIRONMENT:",
@@ -1284,6 +1296,10 @@
     "translation": "Incorrect usage: invalid healthcheck type"
   },
   {
+    "id": "Instances:",
+    "translation": ""
+  },
+  {
     "id": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint"
   },
@@ -1298,6 +1314,10 @@
   {
     "id": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information.",
     "translation": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information."
+  },
+  {
+    "id": "Last uploaded:",
+    "translation": ""
   },
   {
     "id": "List tasks of an app",
@@ -1316,6 +1336,10 @@
     "translation": "Max wait time to establish a connection, including name resolution, in seconds"
   },
   {
+    "id": "Memory",
+    "translation": ""
+  },
+  {
     "id": "NEW_NAME",
     "translation": "NEW_NAME"
   },
@@ -1325,6 +1349,10 @@
   },
   {
     "id": "Name to give the task (generated if omitted)",
+    "translation": ""
+  },
+  {
+    "id": "Name:",
     "translation": ""
   },
   {
@@ -1448,6 +1476,10 @@
     "translation": "Route and domain management:"
   },
   {
+    "id": "Routes:",
+    "translation": ""
+  },
+  {
     "id": "Run a one-off task on an app",
     "translation": ""
   },
@@ -1492,12 +1524,20 @@
     "translation": ""
   },
   {
+    "id": "Since",
+    "translation": ""
+  },
+  {
     "id": "Space '{{.Name}}' not found.",
     "translation": ""
   },
   {
     "id": "Space management:",
     "translation": "Space management:"
+  },
+  {
+    "id": "Stack:",
+    "translation": ""
   },
   {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
@@ -1989,6 +2029,10 @@
   },
   {
     "id": "{{.BinaryName}} version {{.VersionString}}",
+    "translation": ""
+  },
+  {
+    "id": "{{.MemorySize}} x {{.NumInstances}} instances",
     "translation": ""
   },
   {
