--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -72,6 +72,10 @@
     "translation": "Before getting started:"
   },
   {
+    "id": "Buildpack:",
+    "translation": ""
+  },
+  {
     "id": "CANCELING",
     "translation": ""
   },
@@ -1104,6 +1108,10 @@
     "translation": "COMMAND"
   },
   {
+    "id": "CPU",
+    "translation": ""
+  },
+  {
     "id": "Cloud Foundry API version {{.APIVersion}} requires CLI version {{.MinCLIVersion}}. You are currently on version {{.BinaryVersion}}. To upgrade your CLI, please visit: https://github.com/cloudfoundry/cli#downloads",
     "translation": ""
   },
@@ -1145,6 +1153,10 @@
   },
   {
     "id": "Deleting route {{.Route}} ...",
+    "translation": ""
+  },
+  {
+    "id": "Disk",
     "translation": ""
   },
   {
@@ -1232,6 +1244,10 @@
     "translation": "Incorrect usage: invalid healthcheck type"
   },
   {
+    "id": "Instances:",
+    "translation": ""
+  },
+  {
     "id": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": "Invalid SSL Cert for {{.API}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint"
   },
@@ -1246,6 +1262,10 @@
   {
     "id": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information.",
     "translation": "Job ({{.JobGUID}}) polling timeout has been reached. The operation may still be running on the CF instance. Your CF operator may have more information."
+  },
+  {
+    "id": "Last uploaded:",
+    "translation": ""
   },
   {
     "id": "List tasks of an app",
@@ -1264,6 +1284,10 @@
     "translation": "Max wait time to establish a connection, including name resolution, in seconds"
   },
   {
+    "id": "Memory",
+    "translation": ""
+  },
+  {
     "id": "NEW_NAME",
     "translation": "NEW_NAME"
   },
@@ -1273,6 +1297,10 @@
   },
   {
     "id": "Name to give the task (generated if omitted)",
+    "translation": ""
+  },
+  {
+    "id": "Name:",
     "translation": ""
   },
   {
@@ -1400,6 +1428,10 @@
     "translation": "Route and domain management:"
   },
   {
+    "id": "Routes:",
+    "translation": ""
+  },
+  {
     "id": "Run a one-off task on an app",
     "translation": ""
   },
@@ -1440,12 +1472,20 @@
     "translation": ""
   },
   {
+    "id": "Since",
+    "translation": ""
+  },
+  {
     "id": "Space '{{.Name}}' not found.",
     "translation": ""
   },
   {
     "id": "Space management:",
     "translation": "Space management:"
+  },
+  {
+    "id": "Stack:",
+    "translation": ""
   },
   {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
@@ -1918,6 +1958,10 @@
   {
     "id": "{{.CFName}} login",
     "translation": "{{.CFName}} login"
+  },
+  {
+    "id": "{{.MemorySize}} x {{.NumInstances}} instances",
+    "translation": ""
   },
   {
     "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
