--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -1884,6 +1884,10 @@
     "translation": "Updating a plan"
   },
   {
+    "id": "Updating health check type to '{{.HealthCheckType}}' for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
+    "translation": ""
+  },
+  {
     "id": "Usage:",
     "translation": "Usage:"
   },
